--- a/grk-project.vcxproj.filters
+++ b/grk-project.vcxproj.filters
@@ -42,6 +42,12 @@
     <None Include="shaders\shader_4_1.frag">
       <Filter>Shader Files</Filter>
     </None>
+    <None Include="shaders\shader_texture.frag">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="shaders\shader_texture.vert">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Box.cpp">
