Add textures Earth,Sun and Moon

--- a/grk-project.vcxproj
+++ b/grk-project.vcxproj
@@ -17,6 +17,8 @@
     <None Include="shaders\shader_color.vert" />
     <None Include="shaders\shader_skybox.frag" />
     <None Include="shaders\shader_skybox.vert" />
+    <None Include="shaders\shader_sun_tex.frag" />
+    <None Include="shaders\shader_sun_tex.vert" />
     <None Include="shaders\shader_texture.frag" />
     <None Include="shaders\shader_texture.vert" />
   </ItemGroup>
