--- a/grk-project.vcxproj.filters
+++ b/grk-project.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="src\Skybox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Physics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stb_image.h">
@@ -105,6 +108,9 @@
     </ClInclude>
     <ClInclude Include="src\Skybox.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Physics.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
