--- a/grk-project.vcxproj.filters
+++ b/grk-project.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="src\Physics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CustomCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stb_image.h">
@@ -110,6 +113,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Physics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CustomCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
