Add CustomMouseControll files and their funcions

--- a/grk-project.vcxproj.filters
+++ b/grk-project.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClCompile Include="src\CustomCamera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CustomMouseController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\stb_image.h">
@@ -116,6 +119,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\CustomCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CustomMouseController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
