--- a/grk-project.vcxproj
+++ b/grk-project.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="src\Box.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\CustomCamera.cpp" />
+    <ClCompile Include="src\CustomMouseController.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Physics.cpp" />
     <ClCompile Include="src\picopng.cpp" />
@@ -37,6 +38,7 @@
   <ItemGroup>
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\CustomCamera.h" />
+    <ClInclude Include="src\CustomMouseController.h" />
     <ClInclude Include="src\mesh.h" />
     <ClInclude Include="src\model.h" />
     <ClInclude Include="src\objload.h" />
