--- a/grk-project.vcxproj
+++ b/grk-project.vcxproj
@@ -15,6 +15,8 @@
     <None Include="shaders\shader_4_1.vert" />
     <None Include="shaders\shader_color.frag" />
     <None Include="shaders\shader_color.vert" />
+    <None Include="shaders\shader_particle.frag" />
+    <None Include="shaders\shader_particle.vert" />
     <None Include="shaders\shader_skybox.frag" />
     <None Include="shaders\shader_skybox.vert" />
     <None Include="shaders\shader_sun_tex.frag" />
